--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v6
       with:
-        go-version: '1.25'
+        go-version: '1.24'
         cache: true
 
     - name: Configure git for tests
@@ -38,6 +38,11 @@ jobs:
 
     - name: Build
       run: go build -v ./...
+      
+    - name: golangci-lint
+      uses: golangci/golangci-lint-action@v8
+      with:
+        version: v2.7
 
     - name: Run tests
       run: go test -race -vet=off ./...
